<resources>
    <string name="app_name">E-Shopping</string>
    <string name="title_activity_browser_products">BrowserProducts</string>
    <string name="title_home">Home</string>
    <string name="title_furniture">Furniture</string>
    <string name="title_cloth">Cloth</string>
    <string name="title_phone">Phone</string>
    <string name="title_food">Food</string>
    <string name="title_cart">Cart</string>
    <string name="title_order">Orders</string>
    <string name="title_logout">Logout</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_browse_products">BrowseProducts</string>
    <string name="title_activity_browse_category">BrowseCategory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
