<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_bike"
        android:icon="@drawable/ic_food"
        android:title="@string/title_food" />

    <item
        android:id="@+id/navigation_car"
        android:icon="@drawable/ic_phone"
        android:title="@string/title_phone" />

    <item
        android:id="@+id/navigation_bus"
        android:icon="@drawable/ic_cloth"
        android:title="@string/title_cloth" />

    <item
        android:id="@+id/navigation_truck"
        android:icon="@drawable/ic_furniture"
        android:title="@string/title_furniture" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_navdashboard"
        android:title="@string/title_dashboard" />

</menu>
